# lossx

./: README.md  pyproject.toml
.github/workflows/: lint.yml  publish.yml  tests.yml
src/lossx/: __init__.py  builder.py  types.py
src/lossx/loss/: __init__.py  contrastive.py  cross_entropy.py  focal.py  gaussian_nll.py  mse.py  penex.py  q_loss.py  quantile_loss.py
tests/: __init__.py  test_builder.py  test_loss_functions.py
